[gd_scene load_steps=14 format=2]

[ext_resource path="res://addons/Dialog/Fonts/KOMIKAX_.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://addons/Dialog/patch_grid_dialog.gd" type="Script" id=2]
[ext_resource path="res://addons/Dialog/Graphics/canvas_background2.png" type="Texture" id=3]
[ext_resource path="res://addons/Dialog/Graphics/cancel_button_normal.png" type="Texture" id=4]
[ext_resource path="res://addons/Dialog/Graphics/control_subpoint_normal.png" type="Texture" id=5]
[ext_resource path="res://addons/Dialog/Graphics/cancel_button_over.png" type="Texture" id=6]
[ext_resource path="res://addons/Dialog/Fonts/verdana.tres" type="DynamicFont" id=7]
[ext_resource path="res://addons/Dialog/Graphics/maximize_button_over.png" type="Texture" id=9]
[ext_resource path="res://addons/Dialog/Graphics/maximize_button_normal.png" type="Texture" id=10]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 6.0
content_margin_right = 6.0
content_margin_top = 6.0
content_margin_bottom = 6.0
bg_color = Color( 0.196078, 0.133333, 0.133333, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="GDScript" id=2]
script/source = "extends DefaultDialog

var _patchs
var maximized = false

func set_image(img, patchs):
	var node = find_node(\"Main\")
	_patchs = patchs
	node.set_image(img, patchs)


func _on_PatchGridDialog_hide() -> void:
	var node = find_node(\"Main\")
	var values = node.get_values()
	_patchs.left.value = values.left
	_patchs.right.value = values.right
	_patchs.top.value = values.top
	_patchs.bottom.value = values.bottom



func _on_Expand_button_down() -> void:
	var node = find_node(\"ExpandButton\")
	var v = true
	if node.text == \"shrink legend\":
		node.text = \"expand legend\"
		v = false
	else:
		node.text = \"shrink legend\"
	find_node(\"leyendBackground\").visible = v
	find_node(\"leyend1\").visible = v
	find_node(\"leyend2\").visible = v
	find_node(\"leyend3\").visible = v
	find_node(\"leyend4\").visible = v
	find_node(\"leyend5\").visible = v
	find_node(\"leyendButton\").visible = v


func maximize() -> void:
	var margin = Vector2(10, 10)
	var node = find_node(\"MaximizedButton\").get_child(0)
	var size; var pos;
	if node.text == \"+\":
		node.text = \"-\"
		size = get_viewport().size - margin
		pos = margin
		maximized = [rect_size, rect_position]
	else:
		node.text = \"+\"
		size = maximized[0]
		pos = maximized[1]
		maximized = false
	rect_size = size
	rect_position = pos

func _on_gui_input(event : InputEvent) -> void:
	if maximized: return
	._on_gui_input(event)
"

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="DynamicFont" id=4]
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[node name="PatchGridDialog" type="Panel"]
margin_right = 638.0
margin_bottom = 492.0
rect_min_size = Vector2( 500, 600 )
custom_styles/panel = SubResource( 1 )
script = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}
resizable = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
margin_right = 638.0
margin_bottom = 57.0
mouse_filter = 2
custom_constants/margin_right = 20
custom_constants/margin_top = 25
custom_constants/margin_left = 20

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer"]
margin_left = 20.0
margin_top = 25.0
margin_right = 618.0
margin_bottom = 57.0

[node name="Label" type="Label" parent="VBoxContainer/MarginContainer/HBoxContainer"]
margin_top = 2.0
margin_right = 526.0
margin_bottom = 30.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0.733333, 0.8, 0.941176, 1 )
text = "Edit Patchs"

[node name="MaximizedButton" type="TextureButton" parent="VBoxContainer/MarginContainer/HBoxContainer"]
margin_left = 530.0
margin_right = 562.0
margin_bottom = 32.0
mouse_default_cursor_shape = 2
size_flags_vertical = 4
texture_normal = ExtResource( 10 )
texture_hover = ExtResource( 9 )

[node name="Label" type="Label" parent="VBoxContainer/MarginContainer/HBoxContainer/MaximizedButton"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 6.0
margin_top = 6.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "+"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="VBoxContainer/MarginContainer/HBoxContainer"]
margin_left = 566.0
margin_right = 598.0
margin_bottom = 32.0
mouse_default_cursor_shape = 2
size_flags_vertical = 4
texture_normal = ExtResource( 4 )
texture_hover = ExtResource( 6 )

[node name="MainMarginContainer" type="MarginContainer" parent="VBoxContainer"]
margin_top = 61.0
margin_right = 638.0
margin_bottom = 600.0
mouse_filter = 1
size_flags_vertical = 3
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Main" type="Control" parent="VBoxContainer/MainMarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 618.0
margin_bottom = 519.0
rect_clip_content = true
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ImageContainer" type="Control" parent="VBoxContainer/MainMarginContainer/Main"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 299, 195 )
rect_clip_content = true
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="VBoxContainer/MainMarginContainer/Main/ImageContainer"]
self_modulate = Color( 0.717647, 0.933333, 0.992157, 0.529412 )
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 512, 384 )
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 3 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Image" type="NinePatchRect" parent="VBoxContainer/MainMarginContainer/Main/ImageContainer"]
margin_right = 270.0
margin_bottom = 156.0
rect_scale = Vector2( 0.5, 0.5 )
size_flags_horizontal = 0
size_flags_vertical = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Margins" type="Panel" parent="VBoxContainer/MainMarginContainer/Main"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
custom_styles/panel = SubResource( 3 )

[node name="LeftLine" type="ColorRect" parent="VBoxContainer/MainMarginContainer/Main/Margins"]
anchor_bottom = 1.0
margin_right = 22.0
margin_bottom = 499.0
rect_min_size = Vector2( 22, 0 )
focus_mode = 2
mouse_default_cursor_shape = 10
size_flags_horizontal = 0
size_flags_vertical = 3
color = Color( 0, 0, 0, 0.196078 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="inner" type="ColorRect" parent="VBoxContainer/MainMarginContainer/Main/Margins/LeftLine"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 3, 0 )
focus_mode = 2
mouse_filter = 2
mouse_default_cursor_shape = 2
size_flags_horizontal = 4
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RightLine" type="ColorRect" parent="VBoxContainer/MainMarginContainer/Main/Margins"]
anchor_bottom = 1.0
margin_right = 22.0
margin_bottom = 499.0
rect_min_size = Vector2( 22, 0 )
focus_mode = 2
mouse_default_cursor_shape = 10
size_flags_horizontal = 0
size_flags_vertical = 3
color = Color( 0, 0, 0, 0.196078 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="inner" type="ColorRect" parent="VBoxContainer/MainMarginContainer/Main/Margins/RightLine"]
anchor_bottom = 1.0
rect_min_size = Vector2( 3, 0 )
focus_mode = 2
mouse_filter = 2
mouse_default_cursor_shape = 2
size_flags_horizontal = 4
size_flags_vertical = 3
color = Color( 0.054902, 0.713726, 0.866667, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopLine" type="ColorRect" parent="VBoxContainer/MainMarginContainer/Main/Margins"]
anchor_right = 1.0
margin_right = 598.0
margin_bottom = 22.0
rect_min_size = Vector2( 0, 22 )
focus_mode = 2
mouse_default_cursor_shape = 9
size_flags_horizontal = 3
size_flags_vertical = 0
color = Color( 0, 0, 0, 0.196078 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="inner" type="ColorRect" parent="VBoxContainer/MainMarginContainer/Main/Margins/TopLine"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 0, 3 )
focus_mode = 2
mouse_filter = 2
mouse_default_cursor_shape = 2
size_flags_horizontal = 4
size_flags_vertical = 3
color = Color( 0.647059, 0.160784, 0.0862745, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BottomLine" type="ColorRect" parent="VBoxContainer/MainMarginContainer/Main/Margins"]
anchor_right = 1.0
margin_right = 598.0
margin_bottom = 22.0
rect_min_size = Vector2( 0, 22 )
focus_mode = 2
mouse_default_cursor_shape = 9
size_flags_horizontal = 3
size_flags_vertical = 0
color = Color( 0, 0, 0, 0.196078 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="inner" type="ColorRect" parent="VBoxContainer/MainMarginContainer/Main/Margins/BottomLine"]
anchor_right = 1.0
rect_min_size = Vector2( 0, 3 )
focus_mode = 2
mouse_filter = 2
mouse_default_cursor_shape = 2
size_flags_horizontal = 4
size_flags_vertical = 3
color = Color( 0.501961, 0.666667, 0.239216, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Leyend" type="MarginContainer" parent="VBoxContainer/MainMarginContainer/Main"]
margin_right = 178.0
margin_bottom = 140.0
custom_constants/margin_top = 10
custom_constants/margin_left = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="leyendBackground" type="ColorRect" parent="VBoxContainer/MainMarginContainer/Main/Leyend"]
margin_left = 10.0
margin_top = 28.0
margin_right = 178.0
margin_bottom = 214.0
rect_min_size = Vector2( 0, 186 )
size_flags_vertical = 8
color = Color( 0, 0, 0, 0.282353 )

[node name="ColorRect" type="ColorRect" parent="VBoxContainer/MainMarginContainer/Main/Leyend"]
margin_left = 10.0
margin_top = 10.0
margin_right = 178.0
margin_bottom = 32.0
rect_min_size = Vector2( 0, 22 )
size_flags_vertical = 0
color = Color( 1, 1, 1, 0.192157 )

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MainMarginContainer/Main/Leyend"]
margin_left = 10.0
margin_top = 10.0
margin_right = 178.0
margin_bottom = 214.0

[node name="ExpandButton" type="Button" parent="VBoxContainer/MainMarginContainer/Main/Leyend/VBoxContainer"]
margin_left = 24.0
margin_right = 144.0
margin_bottom = 20.0
rect_min_size = Vector2( 120, 0 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 6
size_flags_vertical = 4
text = "shrink legend"

[node name="leyend1" type="HBoxContainer" parent="VBoxContainer/MainMarginContainer/Main/Leyend/VBoxContainer"]
margin_top = 24.0
margin_right = 168.0
margin_bottom = 52.0

[node name="control_subpoint_normal" type="TextureRect" parent="VBoxContainer/MainMarginContainer/Main/Leyend/VBoxContainer/leyend1"]
margin_top = 6.0
margin_right = 16.0
margin_bottom = 22.0
size_flags_vertical = 4
texture = ExtResource( 5 )

[node name="Label" type="Label" parent="VBoxContainer/MainMarginContainer/Main/Leyend/VBoxContainer/leyend1"]
margin_left = 20.0
margin_right = 90.0
margin_bottom = 28.0
rect_min_size = Vector2( 70, 0 )
custom_fonts/font = SubResource( 4 )
text = "Left"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpinBox1" type="SpinBox" parent="VBoxContainer/MainMarginContainer/Main/Leyend/VBoxContainer/leyend1"]
margin_left = 94.0
margin_top = 2.0
margin_right = 168.0
margin_bottom = 26.0
size_flags_vertical = 4
step = 0.5
allow_greater = true
allow_lesser = true

[node name="leyend2" type="HBoxContainer" parent="VBoxContainer/MainMarginContainer/Main/Leyend/VBoxContainer"]
margin_top = 56.0
margin_right = 168.0
margin_bottom = 84.0

[node name="control_subpoint_normal" type="TextureRect" parent="VBoxContainer/MainMarginContainer/Main/Leyend/VBoxContainer/leyend2"]
self_modulate = Color( 0.2, 0.678431, 0.941176, 1 )
margin_top = 6.0
margin_right = 16.0
margin_bottom = 22.0
size_flags_vertical = 4
texture = ExtResource( 5 )

[node name="Label" type="Label" parent="VBoxContainer/MainMarginContainer/Main/Leyend/VBoxContainer/leyend2"]
margin_left = 20.0
margin_right = 90.0
margin_bottom = 28.0
rect_min_size = Vector2( 70, 0 )
custom_fonts/font = SubResource( 4 )
text = "Right"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpinBox2" type="SpinBox" parent="VBoxContainer/MainMarginContainer/Main/Leyend/VBoxContainer/leyend2"]
margin_left = 94.0
margin_top = 2.0
margin_right = 168.0
margin_bottom = 26.0
size_flags_vertical = 4
step = 0.5
allow_greater = true
allow_lesser = true

[node name="leyend3" type="HBoxContainer" parent="VBoxContainer/MainMarginContainer/Main/Leyend/VBoxContainer"]
margin_top = 88.0
margin_right = 168.0
margin_bottom = 116.0

[node name="control_subpoint_normal" type="TextureRect" parent="VBoxContainer/MainMarginContainer/Main/Leyend/VBoxContainer/leyend3"]
self_modulate = Color( 0.945098, 0.239216, 0.12549, 1 )
margin_top = 6.0
margin_right = 16.0
margin_bottom = 22.0
size_flags_vertical = 4
texture = ExtResource( 5 )

[node name="Label" type="Label" parent="VBoxContainer/MainMarginContainer/Main/Leyend/VBoxContainer/leyend3"]
margin_left = 20.0
margin_right = 90.0
margin_bottom = 28.0
rect_min_size = Vector2( 70, 0 )
custom_fonts/font = SubResource( 4 )
text = "Up"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpinBox3" type="SpinBox" parent="VBoxContainer/MainMarginContainer/Main/Leyend/VBoxContainer/leyend3"]
margin_left = 94.0
margin_top = 2.0
margin_right = 168.0
margin_bottom = 26.0
size_flags_vertical = 4
step = 0.5
allow_greater = true
allow_lesser = true

[node name="leyend4" type="HBoxContainer" parent="VBoxContainer/MainMarginContainer/Main/Leyend/VBoxContainer"]
margin_top = 120.0
margin_right = 168.0
margin_bottom = 148.0

[node name="control_subpoint_normal" type="TextureRect" parent="VBoxContainer/MainMarginContainer/Main/Leyend/VBoxContainer/leyend4"]
self_modulate = Color( 0.717647, 1, 0.266667, 1 )
margin_top = 6.0
margin_right = 16.0
margin_bottom = 22.0
size_flags_vertical = 4
texture = ExtResource( 5 )

[node name="Label" type="Label" parent="VBoxContainer/MainMarginContainer/Main/Leyend/VBoxContainer/leyend4"]
margin_left = 20.0
margin_right = 90.0
margin_bottom = 28.0
rect_min_size = Vector2( 70, 0 )
custom_fonts/font = SubResource( 4 )
text = "Down"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpinBox4" type="SpinBox" parent="VBoxContainer/MainMarginContainer/Main/Leyend/VBoxContainer/leyend4"]
margin_left = 94.0
margin_top = 2.0
margin_right = 168.0
margin_bottom = 26.0
size_flags_vertical = 4
step = 0.5
allow_greater = true
allow_lesser = true

[node name="leyend5" type="HBoxContainer" parent="VBoxContainer/MainMarginContainer/Main/Leyend/VBoxContainer"]
margin_top = 152.0
margin_right = 168.0
margin_bottom = 180.0

[node name="Control" type="Control" parent="VBoxContainer/MainMarginContainer/Main/Leyend/VBoxContainer/leyend5"]
margin_right = 16.0
margin_bottom = 28.0
rect_min_size = Vector2( 16, 16 )

[node name="Label" type="Label" parent="VBoxContainer/MainMarginContainer/Main/Leyend/VBoxContainer/leyend5"]
margin_left = 20.0
margin_right = 90.0
margin_bottom = 28.0
rect_min_size = Vector2( 70, 0 )
custom_fonts/font = SubResource( 4 )
text = "Zoom"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpinBox5" type="SpinBox" parent="VBoxContainer/MainMarginContainer/Main/Leyend/VBoxContainer/leyend5"]
margin_left = 94.0
margin_top = 2.0
margin_right = 168.0
margin_bottom = 26.0
size_flags_vertical = 4
min_value = 1.0
step = 0.2
value = 1.0
allow_greater = true

[node name="leyendButton" type="Button" parent="VBoxContainer/MainMarginContainer/Main/Leyend/VBoxContainer"]
margin_left = 24.0
margin_top = 184.0
margin_right = 144.0
margin_bottom = 204.0
rect_min_size = Vector2( 120, 0 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 6
size_flags_vertical = 4
text = "center"
[connection signal="hide" from="." to="." method="_on_PatchGridDialog_hide"]
[connection signal="button_down" from="VBoxContainer/MarginContainer/HBoxContainer/MaximizedButton" to="." method="maximize"]
[connection signal="button_down" from="VBoxContainer/MarginContainer/HBoxContainer/TextureButton" to="." method="hide"]
[connection signal="gui_input" from="VBoxContainer/MainMarginContainer/Main" to="VBoxContainer/MainMarginContainer/Main" method="_on_PatchGridDialog_gui_input"]
[connection signal="item_rect_changed" from="VBoxContainer/MainMarginContainer/Main" to="VBoxContainer/MainMarginContainer/Main" method="_on_PatchGridDialog_item_rect_changed"]
[connection signal="item_rect_changed" from="VBoxContainer/MainMarginContainer/Main/ImageContainer" to="VBoxContainer/MainMarginContainer/Main" method="_on_ImageContainer_item_rect_changed"]
[connection signal="focus_entered" from="VBoxContainer/MainMarginContainer/Main/Margins/LeftLine" to="VBoxContainer/MainMarginContainer/Main" method="_on_LeftLine_focus_entered"]
[connection signal="gui_input" from="VBoxContainer/MainMarginContainer/Main/Margins/LeftLine" to="VBoxContainer/MainMarginContainer/Main" method="update_left_position"]
[connection signal="focus_entered" from="VBoxContainer/MainMarginContainer/Main/Margins/RightLine" to="VBoxContainer/MainMarginContainer/Main" method="_on_RightLine_focus_entered"]
[connection signal="gui_input" from="VBoxContainer/MainMarginContainer/Main/Margins/RightLine" to="VBoxContainer/MainMarginContainer/Main" method="update_right_position"]
[connection signal="focus_entered" from="VBoxContainer/MainMarginContainer/Main/Margins/TopLine" to="VBoxContainer/MainMarginContainer/Main" method="_on_TopLine_focus_entered"]
[connection signal="gui_input" from="VBoxContainer/MainMarginContainer/Main/Margins/TopLine" to="VBoxContainer/MainMarginContainer/Main" method="update_top_position"]
[connection signal="focus_entered" from="VBoxContainer/MainMarginContainer/Main/Margins/BottomLine" to="VBoxContainer/MainMarginContainer/Main" method="_on_BottomLine_focus_entered"]
[connection signal="gui_input" from="VBoxContainer/MainMarginContainer/Main/Margins/BottomLine" to="VBoxContainer/MainMarginContainer/Main" method="update_bottom_position"]
[connection signal="button_down" from="VBoxContainer/MainMarginContainer/Main/Leyend/VBoxContainer/ExpandButton" to="." method="_on_Expand_button_down"]
[connection signal="value_changed" from="VBoxContainer/MainMarginContainer/Main/Leyend/VBoxContainer/leyend5/SpinBox5" to="VBoxContainer/MainMarginContainer/Main" method="_on_zoom_SpinBox_value_changed"]
[connection signal="button_down" from="VBoxContainer/MainMarginContainer/Main/Leyend/VBoxContainer/leyendButton" to="VBoxContainer/MainMarginContainer/Main" method="center"]
